Fix card width on mobile

--- a/src/styles/dashboard/TeamCard.scss
+++ b/src/styles/dashboard/TeamCard.scss
@@ -66,3 +66,9 @@
     align-self: center;
 }
 
+@media (max-width: $tablet-breakpoint) {
+    .TeamPage__pokemonPark {
+        width: 90%;
+    }
+}
+
